# BiteSizePython

./: .gitignore  README.md  pyproject.toml
bite-size-dev-tips/data-design/structured-returns/: after.py
bite-size/data-design/structured-returns/: README.md  after.py  before.py
modelling-data/finite-differences/: README.md  pyproject.toml  script.py
modelling-data/fit-results/: README.md  after.py  before.py  pyproject.toml
modelling-data/structured-data/: README.md  after.py  before.py  pyproject.toml
modelling-data/structured-returns/: README.md  after.py  before.py  pyproject.toml
modelling-data/vector-calculus/: README.md  after.py  before.py  pyproject.toml
modelling-data/vector-calculus/src/local_helpers/: vector_field.py
repo-setup/git-basics/: README.md
repo-setup/git-branches/: README.md
repo-setup/project-structure/: README.md  pyproject.toml
repo-setup/project-structure/scripts/: analyse.py
repo-setup/project-structure/src/local_helpers/: fit.py
repo-setup/uv/: README.md  after.py  analysis.py  before.py  script.py
