[project]
name = "project-structure"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.0",
    "scipy>=1.17.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/local_helpers"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
